review page empty when form submit, no longer overflow on book title for review

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -421,3 +421,11 @@ body {
     box-shadow: inset 300px 0 0 0 var(--background-green);
   }
 }
+
+.reviewFormGroup{
+  max-width: 100%;
+}
+
+.bookTitleSelect{
+  max-width: 100%;
+}
